add first links

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
   <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">
-  <h1><span class="no">no</span><s>framework</s></h1>
-  <img src="noframework.png" alt="noframework logo" width="512" height="512"/>
-</a>
+<h1><span class="no">no</span>framework</h1>
+<section>
+  <h2>Read</h2>
+  <section>
+    <h3>Why</h3>
+    <ul>
+      <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
+        2022-02</li>
+    </ul>
+  </section>
+</section>
+<section>
+  <h2>Examples</h2>
+  <ul>
+    <li><a href="https://github.com/noframework-org/vanilla-examples">Vanilla JS examples</a></li>
+  </ul>
+</section>
+<section>
+  <h2>Resources</h2>
+  <ul>
+    <li><a href="https://github.com/plain-JavaScript">plain-JavaScript</a></li>
+  </ul>
+</section>
 </body>
 <script async src="index.js" type="application/javascript"></script>
 </html>
