--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <section>
     <h3>Why</h3>
     <ul>
+      <li>Young, G.: "<a href="https://www.infoq.com/presentations/8-lines-code-refactoring">8 lines of code</a>"</li>
       <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
         2022-02</li>
     </ul>
@@ -29,6 +30,7 @@
   <h2>Resources</h2>
   <ul>
     <li><a href="https://github.com/plain-JavaScript">plain-JavaScript</a></li>
+    <li><a href="https://www.frameworklessmovement.org">frameworkless movement</a></li>
   </ul>
 </section>
 </body>
