--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <h1><span class="no">no</span>framework</h1>
 <section>
   <h2>Read</h2>
-  <section>
-    <h3>Why</h3>
-    <ul>
-      <li>Young, G.: "<a href="https://www.infoq.com/presentations/8-lines-code-refactoring">8 lines of code</a>"</li>
-      <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
-        2022-02</li>
-    </ul>
-  </section>
+  <ul>
+    <li>Young, G.: "<a href="https://www.infoq.com/presentations/8-lines-code-refactoring">8 lines of code</a>", QCon,
+      2013</li>
+    <li>Holovaty, A.: "<a href="https://www.youtube.com/watch?v=VvOsegaN9Wk">A framework author's case against
+      frameworks</a>", dotJS, 2017</li>
+    <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
+      Medium, 2022-02</li>
+  </ul>
 </section>
 <section>
   <h2>Examples</h2>
