--- a/index.html
+++ b/index.html
@@ -9,23 +9,13 @@
 </head>
 <body>
 <h1><span class="no">no</span>framework</h1>
-<section>
+<a href="read">
   <h2>Read</h2>
-  <ul>
-    <li>Young, G.: "<a href="https://www.infoq.com/presentations/8-lines-code-refactoring">8 lines of code</a>", QCon,
-      2013</li>
-    <li>Holovaty, A.: "<a href="https://www.youtube.com/watch?v=VvOsegaN9Wk">A framework author's case against
-      frameworks</a>", dotJS, 2017</li>
-    <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
-      Medium, 2022-02</li>
-  </ul>
-</section>
-<section>
-  <h2>Examples</h2>
-  <ul>
-    <li><a href="https://github.com/noframework-org/vanilla-examples">Vanilla JS examples</a></li>
-  </ul>
-</section>
+  <p>Why</p>
+</a>
+<a href="how">
+  <h2>How</h2>
+</a>
 <section>
   <h2>Resources</h2>
   <ul>
