--- a/how/js/index.html
+++ b/how/js/index.html
@@ -11,8 +11,12 @@
 <nav><a href="/">noframework</a> <a href="..">how</a></nav>
 <h1>How to use Vanilla JS</h1>
 <section>
+  <h2>Modules in browser</h2>
+  <p>Just add <code>type="module"</code> in your script tag. Then you'll be able to <code>export</code>/<code>import</code>.</p>
+</section>
+<section>
   <h2>Typing</h2>
-  <p>If you want to check some types, use <a href="https://jsdoc.app/">JSDoc</a></p>
+  <p>IDE can check your types by checking your <a href="https://jsdoc.app/">JSDoc</a> comments.</p>
 </section>
 <section>
   <h2>Examples</h2>
