--- a/how/js/index.html
+++ b/how/js/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>How to use Vanilla JS - noframework</title>
+  <title>How build software using just vanilla JS - noframework</title>
   <meta content="Jérôme Beau" name="author">
+  <meta name="description" content="How to build software without a framework">
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <link href="/index.css" rel="stylesheet"/>
 </head>
 <body>
-<nav><a href="/">noframework</a> <a href="..">how</a></nav>
-<h1>How to use Vanilla JS</h1>
+<nav><a href="/">noframework</a>'s <a href="..">how</a></nav>
+<h1>How build software using just vanilla JS</h1>
 <section>
   <h2>Modules in browser</h2>
   <p>Just add <code>type="module"</code> in your script tag. Then you'll be able to <code>export</code>/<code>import</code>.</p>
 </section>
 <section>
   <h2>Typing</h2>
-  <p>IDE can check your types by checking your <a href="https://jsdoc.app/">JSDoc</a> comments.</p>
+  <p>Your IDE can check your types by checking your <a href="https://jsdoc.app/">JSDoc</a> comments.</p>
 </section>
 <section>
   <h2>Examples</h2>
