add code section

--- a/how/index.html
+++ b/how/index.html
@@ -14,6 +14,7 @@
   <li><a href="ts">Using just TypeScript</a></li>
   <li><a href="js">Using just JavaScript</a></li>
   <li><a href="html">Using just HTML</a></li>
+  <li><a href="code">Coding better</a></li>
 </ul>
 </body>
 </html>
