--- a/how/code/index.html
+++ b/how/code/index.html
@@ -12,8 +12,12 @@
 <nav><a href="/">noframework</a>'s <a href="..">how</a></nav>
 <h1>Better code practices</h1>
 <p>Avoiding frameworks implies (re-)discovering good coding practices. Among these are:</p>
-<ul>
-  <li><a href="srp">SRP</a></li>
-</ul>
+<section>
+  <h2>Design</h2>
+  <ul>
+    <li><a href="srp">SRP</a></li>
+  </ul>
+</section>
+
 </body>
 </html>
