--- a/how/js/index.html
+++ b/how/js/index.html
@@ -13,7 +13,11 @@
 <h1>How build software using just vanilla JS</h1>
 <section>
   <h2>Modules in browser</h2>
-  <p>Just add <code>type="module"</code> in your script tag. Then you'll be able to <code>export</code>/<code>import</code>.</p>
+  <p>The goal here is to <code>export</code>/<code>import</code> modern ES modules.</p>
+  <ul>
+    <li>Add <code>type="module"</code> in your script tag.</li>
+    <li>When using <code>import</code> specify the <code>.js</code> file extension so that the browser can find the file.</li>
+  </ul>
 </section>
 <section>
   <h2>Typing</h2>
@@ -24,6 +28,9 @@
   <ul>
     <li><a href="https://github.com/noframework-org/vanilla-examples">Vanilla JS examples</a></li>
   </ul>
+</section>
+<section>
+  <h2><a href="api">APIs</a></h2>
 </section>
 </body>
 </html>
