--- a/how/index.html
+++ b/how/index.html
@@ -11,10 +11,13 @@
 <nav><a href="/">noframework</a></nav>
 <h1>How</h1>
 <ul>
-  <li><a href="ts">Using just TypeScript</a></li>
-  <li><a href="js">Using just JavaScript</a></li>
-  <li><a href="html">Using just HTML</a></li>
+  <li><a href="html">Using HTML/CSS</a></li>
+  <li><a href="js">Using JavaScript</a></li>
+</ul>
+<ul>
   <li><a href="migrate">Migrating from a framework</a></li>
+</ul>
+<ul>
   <li><a href="code">Coding better</a></li>
 </ul>
 </body>
