--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <ul>
     <li><a href="https://github.com/plain-JavaScript">plain-JavaScript</a></li>
     <li><a href="https://www.frameworklessmovement.org">frameworkless movement</a></li>
+    <li><a href="http://vanilla-js.com/">vanilla-js</a></li>
   </ul>
 </section>
 </body>
