--- a/how/js/index.html
+++ b/how/js/index.html
@@ -9,7 +9,7 @@
   <link href="/index.css" rel="stylesheet"/>
 </head>
 <body>
-<nav><a href="/">noframework</a>'s <a href="..">how</a></nav>
+<nav><a href="/">noframework</a>'s <a href="..">how to</a></nav>
 <h1>How build software using just vanilla JS</h1>
 <details>
   <summary>Modules in browser</summary>
