--- a/how/index.html
+++ b/how/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav><a href="/">noframework</a></nav>
-<h1>How</h1>
+<h1>How to</h1>
 <ul>
   <li><a href="html">Using HTML/CSS</a></li>
   <li><a href="js">Using JavaScript</a></li>
