--- a/how/js/index.html
+++ b/how/js/index.html
@@ -27,6 +27,10 @@
   class name, check <code>yourInstance.constructor.name</code>.</p>
   <p>Your IDE can check your types by checking your <a href="https://jsdoc.app/">JSDoc</a> comments.</p>
 </details>
+<details>
+  <summary>Have a page containing some template or another</summary>
+  <p>Define as many <code>&lt;template&gt;</code>s as your need and replace the DOM node by their cloned content.</p>
+</details>
 <section>
   <h2>Examples</h2>
   <ul>
