--- a/how/js/index.html
+++ b/how/js/index.html
@@ -29,7 +29,7 @@
 </details>
 <details>
   <summary>Have a page containing some template or another</summary>
-  <p>Define as many <code>&lt;template&gt;</code>s as your need and replace the DOM node by their cloned content.</p>
+  <p>Define as many <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/template"><code>&lt;template&gt;</code></a>s as your need and replace the DOM node by their cloned content.</p>
 </details>
 <section>
   <h2>Examples</h2>
