--- a/how/js/index.html
+++ b/how/js/index.html
@@ -26,7 +26,8 @@
     <code>number</code> or <code>bigint</code>, <code>string</code>, <code>symbol</code> or <code>object</code>.</p>
   <p>So <code>typeof</code> applied to any of your custom <code>class</code>es will return <code>object</code>. To get
     the actual class name, check <code>yourInstance.constructor.name</code>.</p>
-  <p>Your IDE can check your types by checking your <a href="https://jsdoc.app/">JSDoc</a> comments.</p>
+  <p>Your IDE can check your types by checking your <a href="https://jsdoc.app/">JSDoc</a> comments, which allows your
+    IDE to check types, <a href="https://jsdoc.app/tags-typedef">including your own custom types</a>.</p>
   <p>If you provide an API, you can even <a
     href="https://www.typescriptlang.org/docs/handbook/declaration-files/dts-from-js.html">generate <code>.dt.ts</code>
     files from JavaScript files using JSDoc</a>.</p>
