--- a/how/js/index.html
+++ b/how/js/index.html
@@ -22,7 +22,7 @@
 </details>
 <details>
   <summary>Typing</summary>
-  <p>JavaScript built-in types can be checked using the <code>typeof</code> operator: <code>boolean</code>,
+  <p id="typing">JavaScript built-in types can be checked using the <code>typeof</code> operator: <code>boolean</code>,
     <code>number</code> or <code>bigint</code>, <code>string</code>, <code>symbol</code> or <code>object</code>.</p>
   <p>So <code>typeof</code> applied to any of your custom <code>class</code>es will return <code>object</code>. To get
     the actual class name, check <code>yourInstance.constructor.name</code>.</p>
