--- a/how/migrate/index.html
+++ b/how/migrate/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>How to migrate code from a framework - noframework</title>
+  <title>How to migrate to vanilla code - noframework</title>
   <meta content="Jérôme Beau" name="author">
   <meta name="description" content="How to build software without a framework">
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -10,14 +10,10 @@
 </head>
 <body>
 <nav><a href="/">noframework</a>'s <a href="..">how</a></nav>
-<h1>How to migrate code from a framework</h1>
-<p>Here is a list of standard APIs that can be used as a replacement of some framework feature:</p>
+<h1>How to migrate your code to vanilla:</h1>
 <ul>
-  <li><b>Sanitization</b>: Since <a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/setHTML"><code>
-    Element.setHTML()</code></a> or <a
-      href="https://developer.mozilla.org/en-US/docs/Web/API/Sanitizer/sanitizeFor"><code>Sanitizer.sanitizeFor()</code></a>
-    are not available on all platforms, use the <a href="https://github.com/mozilla/sanitizer-polyfill">relevant
-      polyfill</a>.</li>
+  <li><a href="framework">from a framework</a></li>
+  <li><a href="typescript">from typescript</a></li>
 </ul>
 </body>
 </html>
