--- a/how/html/index.html
+++ b/how/html/index.html
@@ -11,11 +11,12 @@
 <body>
 <nav><a href="/">noframework</a>'s <a href="..">how to</a></nav>
 <h1>Write simpler, better HTML</h1>
+<p>Also, write <a href="css">better CSS</a></p>
 <ul>
   <li>Always set modern doctype: <code>&lt!doctype html&gt;</code></li>
   <li>Always specify the language of your page: <code>&lt;html lang="fr"&gt;</code> for instance.</li>
-  <li>Always fit to device width: <code>&lt;meta name="viewport" content="width=device-width, initial-scale=1
-    .0"/&gt;</code>
+  <li>Always fit to device width: <code>&lt;meta name="viewport" content="width=device-width,
+    initial-scale=1.0"/&gt;</code>
   </li>
 </ul>
 </body>
