--- a/how/js/index.html
+++ b/how/js/index.html
@@ -39,6 +39,10 @@
     href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/template"><code>&lt;template&gt;</code></a>s as your
     need and replace the DOM node by their cloned content.</p>
 </details>
+<details>
+  <summary>Reload code on change</summary>
+  <p>Instead of running <code>node mycode.js</code>, run <code>node --watch mycode.js</code></p>
+</details>
 <section>
   <h2>Examples</h2>
   <ul>
