--- a/how/html/css/index.html
+++ b/how/html/css/index.html
@@ -15,6 +15,13 @@
   <li>Want to implement a scroll animation? Look at the <a
     href="https://developer.mozilla.org/fr/docs/Web/CSS/scroll-timeline"><code>scroll-timeline</code> CSS property</a>
   </li>
+  <li>Import another CSS?
+    <ul>
+      <li>From CSS: Use <a href="https://developer.mozilla.org/fr/docs/Web/CSS/@import"><code>@import</code></a></li>
+      <li>From JS (such as web components): Use <a href="https://web.dev/articles/css-module-scripts">CSS modules</a>
+      </li>
+    </ul>
+  </li>
 </ul>
 </body>
 </html>
