--- a/how/code/index.html
+++ b/how/code/index.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>How to code better - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta name="description" content="How to code better without a framework">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
-<nav><a href="/">noframework</a>'s <a href="..">how</a></nav>
-<h1>Better code practices</h1>
+<!--#include virtual="/header-start.html" -->
+<title>How to code better</title>
+<!--#include virtual="/header-end.html" -->
 <p>Avoiding frameworks implies (re-)discovering good coding practices. Among these are:</p>
 <section>
   <h2>Design</h2>
@@ -18,6 +8,4 @@
     <li><a href="srp">SRP</a></li>
   </ul>
 </section>
-
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
