--- a/how/code/srp/index.html
+++ b/how/code/srp/index.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>SRP - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta name="description" content="Single Responsibility Principle">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
-<nav><a href="/">noframework</a>'s <a href="../..">how</a> to <a href="..">code better</a></nav>
-<h1>SRP</h1>
+<!--#include virtual="/header-start.html" -->
+<title>SRP</title>
+<!--#include virtual="/header-end.html" -->
 <section>
   <h2>Resources</h2>
   <ul>
@@ -18,5 +8,4 @@
       Principle</a>", Medium, 2002-07-12</li>
   </ul>
 </section>
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
