--- a/how/html/css/index.html
+++ b/how/html/css/index.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Write simpler, better CSS - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta name="description" content="How to build software without a framework">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
-<nav><a href="/">noframework</a>'s <a href="../..">how to</a> <a href="..">write better HTML</a></nav>
-<h1>Write simpler, better CSS</h1>
+<!--#include virtual="/header-start.html" -->
+<title>Write simpler, better CSS</title>
+<!--#include virtual="/header-end.html" -->
 <ul>
   <li>Want to implement a scroll animation? Look at the <a
     href="https://developer.mozilla.org/fr/docs/Web/CSS/scroll-timeline"><code>scroll-timeline</code> CSS property</a>
@@ -23,5 +13,4 @@
     </ul>
   </li>
 </ul>
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
