--- a/how/html/index.html
+++ b/how/html/index.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Write simpler, better HTML - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta name="description" content="How to build software without a framework">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
-<nav><a href="/">noframework</a>'s <a href="..">how to</a></nav>
-<h1>Write simpler, better HTML</h1>
+<!--#include virtual="/header-start.html" -->
+<title>Write simpler, better HTML</title>
+<!--#include virtual="/header-end.html" -->
 <p>Also, write <a href="css">better CSS</a></p>
 <ul>
   <li>Always set modern doctype: <code>&lt!doctype html&gt;</code></li>
@@ -19,5 +9,4 @@
     initial-scale=1.0"/&gt;</code>
   </li>
 </ul>
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
