--- a/how/index.html
+++ b/how/index.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>How - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
+<!--#include virtual="/header-start.html" -->
+<title>How</title>
+<!--#include virtual="/header-end.html" -->
 <nav><a href="/">noframework</a></nav>
 <h1>How to</h1>
 <ul>
@@ -20,5 +13,4 @@
 <ul>
   <li><a href="code">Coding better</a></li>
 </ul>
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
