--- a/how/js/index.html
+++ b/how/js/index.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>How build software using just vanilla JS - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta name="description" content="How to build software without a framework">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
-<nav><a href="/">noframework</a>'s <a href="..">how to</a></nav>
-<h1>How build software using just vanilla JS</h1>
+<!--#include virtual="/header-start.html" -->
+<title>How build software using just vanilla JS</title>
+<!--#include virtual="/header-end.html" -->
 <details>
   <summary>Modules in browser</summary>
   <p>The goal here is to <code>export</code>/<code>import</code> modern ES modules.</p>
@@ -52,5 +42,4 @@
 <section>
   <h2><a href="api">APIs</a></h2>
 </section>
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
