--- a/how/migrate/index.html
+++ b/how/migrate/index.html
@@ -1,19 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>How to migrate to vanilla code - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta name="description" content="How to build software without a framework">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
-<nav><a href="/">noframework</a>'s <a href="..">how</a></nav>
-<h1>How to migrate your code to vanilla:</h1>
+<!--#include virtual="/header-start.html" -->
+<title>How to migrate to vanilla code</title>
+<!--#include virtual="/header-end.html" -->
 <ul>
   <li><a href="framework">from a framework</a></li>
   <li><a href="typescript">from typescript</a></li>
 </ul>
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
