--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="index.css" rel="stylesheet"/>
-</head>
-<body>
-<h1><span class="no">no</span>framework</h1>
+<!--#include virtual="/header-start.html" -->
+<title>noframework</title>
+<!--#include virtual="/header-end.html" -->
 <a href="read">
   <h2>Read</h2>
   <p>Why</p>
@@ -24,6 +16,4 @@
     <li><a href="http://vanilla-js.com/">vanilla-js</a></li>
   </ul>
 </section>
-</body>
-<script async src="index.js" type="application/javascript"></script>
-</html>
+<!--#include virtual="/footer.html" -->
