--- a/read/index.html
+++ b/read/index.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Read - noframework</title>
-  <meta content="Jérôme Beau" name="author">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="/index.css" rel="stylesheet"/>
-</head>
-<body>
+<!--#include virtual="/header-start.html" -->
+<title>Read - noframework</title>
+<!--#include virtual="/header-end.html" -->
 <nav><a href="/">noframework</a></nav>
 <h1>Read</h1>
 <ul>
@@ -18,5 +11,4 @@
   <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
     Medium, 2022-02</li>
 </ul>
-</body>
-</html>
+<!--#include virtual="/footer.html" -->
