--- a/header-start.html
+++ b/header-start.html
@@ -4,4 +4,4 @@
   <meta charset="UTF-8">
   <meta content="Jérôme Beau" name="author">
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <link href="index.css" rel="stylesheet"/>
+  <link href="/index.css" rel="stylesheet"/>
