--- a/read/index.html
+++ b/read/index.html
@@ -1,8 +1,6 @@
 <!--#include virtual="/header-start.html" -->
-<title>Read - noframework</title>
+<title>Read</title>
 <!--#include virtual="/header-end.html" -->
-<nav><a href="/">noframework</a></nav>
-<h1>Read</h1>
 <ul>
   <li>Young, G.: "<a href="https://www.infoq.com/presentations/8-lines-code-refactoring">8 lines of code</a>", QCon,
     2013</li>
