read vars from package.json

--- a/how/html/index.html
+++ b/how/html/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>Write simpler, better HTML</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <p>Also, write <a href="css">better CSS</a></p>
 <ul>
   <li>Always set modern doctype: <code>&lt!doctype html&gt;</code></li>
@@ -9,4 +9,4 @@
     initial-scale=1.0"/&gt;</code>
   </li>
 </ul>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
