--- a/how/index.html
+++ b/how/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>How</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <ul>
   <li><a href="html">Using HTML/CSS</a></li>
   <li><a href="js">Using JavaScript</a></li>
@@ -11,4 +11,4 @@
 <ul>
   <li><a href="code">Coding better</a></li>
 </ul>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
