--- a/how/js/index.html
+++ b/how/js/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>How build software using just vanilla JS</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <details>
   <summary>Modules in browser</summary>
   <p>The goal here is to <code>export</code>/<code>import</code> modern ES modules.</p>
@@ -42,4 +42,4 @@
 <section>
   <h2><a href="api">APIs</a></h2>
 </section>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
