--- a/how/migrate/typescript/index.html
+++ b/how/migrate/typescript/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>How to migrate code from TypeScript</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <p>Want to go back from TypeScript but keep some benefits? Use <a href="https://jsdoc.app/">JSDoc</a> and <a
   href="https://github.com/futurGH/ts-to-jsdoc">migrate from TS to JS</a>.</p>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
