--- a/how/code/index.html
+++ b/how/code/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>How to code better</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <p>Avoiding frameworks implies (re-)discovering good coding practices. Among these are:</p>
 <section>
   <h2>Design</h2>
@@ -8,4 +8,4 @@
     <li><a href="srp">SRP</a></li>
   </ul>
 </section>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
