--- a/how/code/srp/index.html
+++ b/how/code/srp/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>SRP</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <section>
   <h2>Resources</h2>
   <ul>
@@ -8,4 +8,4 @@
       Principle</a>", Medium, 2002-07-12</li>
   </ul>
 </section>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
