--- a/how/html/css/index.html
+++ b/how/html/css/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>Write simpler, better CSS</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <ul>
   <li>Want to implement a scroll animation? Look at the <a
     href="https://developer.mozilla.org/fr/docs/Web/CSS/scroll-timeline"><code>scroll-timeline</code> CSS property</a>
@@ -13,4 +13,4 @@
     </ul>
   </li>
 </ul>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
