--- a/how/migrate/framework/index.html
+++ b/how/migrate/framework/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>How to migrate code from a framework</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <p>Here is a list of standard APIs that can be used as a replacement of some framework feature:</p>
 <ul>
   <li><b>Sanitization</b>: Since <a href="https://developer.mozilla.org/en-US/docs/Web/API/Element/setHTML"><code>
@@ -9,4 +9,4 @@
     are not available on all platforms, use the <a href="https://github.com/mozilla/sanitizer-polyfill">relevant
       polyfill</a>.</li>
 </ul>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
