--- a/how/migrate/index.html
+++ b/how/migrate/index.html
@@ -1,8 +1,8 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>How to migrate to vanilla code</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <ul>
   <li><a href="framework">from a framework</a></li>
   <li><a href="typescript">from typescript</a></li>
 </ul>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
