--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>noframework</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <a href="read">
   <h2>Read</h2>
   <p>Why</p>
@@ -16,4 +16,4 @@
     <li><a href="http://vanilla-js.com/">vanilla-js</a></li>
   </ul>
 </section>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
