--- a/read/index.html
+++ b/read/index.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/header-start.html" -->
+<!--#include virtual="/_build/content/header-start.html" -->
 <title>Read</title>
-<!--#include virtual="/header-end.html" -->
+<!--#include virtual="/_build/content/header-end.html" -->
 <ul>
   <li>Young, G.: "<a href="https://www.infoq.com/presentations/8-lines-code-refactoring">8 lines of code</a>", QCon,
     2013</li>
@@ -9,4 +9,4 @@
   <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
     Medium, 2022-02</li>
 </ul>
-<!--#include virtual="/footer.html" -->
+<!--#include virtual="/_build/content/footer.html" -->
