--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <section>
   <h2>Resources</h2>
   <ul>
-    <li><a href="https://github.com/plain-JavaScript">plain-JavaScript</a></li>
     <li><a href="https://www.frameworklessmovement.org">frameworkless movement</a></li>
     <li><a href="http://vanilla-js.com/">vanilla-js</a></li>
+    <li><a href="https://github.com/plain-JavaScript">plain-JavaScript</a></li>
+    <li><a href="https://github.com/oussamahamdaoui/noframework.js">noframework.js</a></li>
   </ul>
 </section>
 <!--#include virtual="/_build/content/footer.html" -->
