--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="http://vanilla-js.com/">vanilla-js</a></li>
     <li><a href="https://github.com/plain-JavaScript">plain-JavaScript</a></li>
     <li><a href="https://github.com/oussamahamdaoui/noframework.js">noframework.js</a></li>
+    <li><a href="https://modern-web.dev/">Modern Web</a></li>
   </ul>
 </section>
 <!--#include virtual="/_build/content/footer.html" -->
