--- a/how/js/index.html
+++ b/how/js/index.html
@@ -22,6 +22,9 @@
   <p>If you provide an API, you can even <a
     href="https://www.typescriptlang.org/docs/handbook/declaration-files/dts-from-js.html">generate <code>.dt.ts</code>
     files from JavaScript files using JSDoc</a>.</p>
+  <p>You can use <a href="https://www.typescriptlang.org/docs/handbook/intro-to-js-ts.html">TypeScript type checking in
+    JavaScript projects</a> and even <a href="https://www.typescriptlang.org/docs/handbook/tsconfig-json.html">use a
+    jsconfig.json</a></p>
 </details>
 <details>
   <summary>Have a page containing some template or another</summary>
