--- a/how/index.html
+++ b/how/index.html
@@ -4,6 +4,7 @@
 <ul>
   <li><a href="html">Using HTML/CSS</a></li>
   <li><a href="js">Using JavaScript</a></li>
+  <li><a href="component">Using Web Components</a></li>
 </ul>
 <ul>
   <li><a href="migrate">Migrating from a framework</a></li>
