migrated to ssg 1.10.8

--- a/how/js/index.html
+++ b/how/js/index.html
@@ -1,5 +1,5 @@
 <!--#include virtual="/_build/content/header-start.html" -->
-<title>How build software using just vanilla JS</title>
+<title>How to build software using just vanilla JS</title>
 <!--#include virtual="/_build/content/header-end.html" -->
 <details>
   <summary>Modules in browser</summary>
