--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <li><a href="https://github.com/plain-JavaScript">plain-JavaScript</a></li>
       <li><a href="https://github.com/oussamahamdaoui/noframework.js">noframework.js</a></li>
       <li><a href="https://modern-web.dev">Modern Web</a></li>
+      <li><a href="https://vanillacademy.com">Vanilla Academy (french book)</a></li>
+      <li><a href="https://javascript.info">javascript.info</a></li>
     </ul>
   </details>
   <details>
