--- a/read/index.html
+++ b/read/index.html
@@ -4,6 +4,9 @@
 <ul>
   <li>Young, G.: "<a href="https://www.infoq.com/presentations/8-lines-code-refactoring">8 lines of code</a>", QCon,
     2013</li>
+  <li>Francois-Xavier P. Darveau: <a
+    href="https://snipcart.com/blog/learn-vanilla-javascript-before-using-js-frameworks">You SHOULD Learn Vanilla
+    JavaScript Before JS Frameworks</a>, SnipCart, 2016</li>
   <li>Holovaty, A.: "<a href="https://www.youtube.com/watch?v=VvOsegaN9Wk">A framework author's case against
     frameworks</a>", dotJS, 2017</li>
   <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
