--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a href="https://modern-web.dev">Modern Web</a></li>
       <li><a href="https://vanillacademy.com">Vanilla Academy (french book)</a></li>
       <li><a href="https://javascript.info">javascript.info</a></li>
+      <li><a href="https://plainvanillaweb.com">Plain Vanilla</a></li>
     </ul>
   </details>
   <details>
