add text fragments

--- a/how/html/css/index.html
+++ b/how/html/css/index.html
@@ -2,15 +2,17 @@
 <title>Write simpler, better CSS</title>
 <!--#include virtual="/_build/content/header-end.html" -->
 <ul>
-  <li>Want to implement a scroll animation? Look at the <a
+  <li>Want to implement a <b>scroll animation</b>? Look at the <a
     href="https://developer.mozilla.org/fr/docs/Web/CSS/scroll-timeline"><code>scroll-timeline</code> CSS property</a>
   </li>
-  <li>Import another CSS?
+  <li><b>Import other CSS</b> file?
     <ul>
       <li>From CSS: Use <a href="https://developer.mozilla.org/fr/docs/Web/CSS/@import"><code>@import</code></a></li>
       <li>From JS (such as web components): Use <a href="https://web.dev/articles/css-module-scripts">CSS modules</a>
       </li>
     </ul>
   </li>
+  <li><b>Select text</b> in the page? Use <a
+    href="https://developer.mozilla.org/en-US/docs/Web/URI/Fragment/Text_fragments">text fragments</a></li>
 </ul>
 <!--#include virtual="/_build/content/footer.html" -->
