upgrade ssg-api

--- a/read/index.html
+++ b/read/index.html
@@ -11,5 +11,7 @@
     frameworks</a>", dotJS, 2017</li>
   <li>Beau, J.: "<a href="https://javarome.medium.com/design-noframework-bbc00a02d9b3">Design: #noframework</a>",
     Medium, 2022-02</li>
+  <li>Nielsen, Jim: "<a href="https://blog.jim-nielsen.com/2024/lowest-common-denominator/?utm_source=tldrwebdev">The
+    Lowest Common Denominator: www</a>", 2024-10-23</li>
 </ul>
 <!--#include virtual="/_build/content/footer.html" -->
