added pureweb site

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="https://vanillacademy.com">Vanilla Academy (french book)</a></li>
       <li><a href="https://javascript.info">javascript.info</a></li>
       <li><a href="https://plainvanillaweb.com">Plain Vanilla</a></li>
+      <li><a href="https://pureweb.dev">Pure Web Foundation</a></li>
     </ul>
   </details>
   <details>
