add links to vanilla JS usage examples

--- a/how/index.html
+++ b/how/index.html
@@ -12,4 +12,7 @@
 <ul>
   <li><a href="code">Coding better</a></li>
 </ul>
+<ul>
+  <li><a href="https://github.com/olavgg/vanillajs">Structured code with vanillaJS</a></li>
+</ul>
 <!--#include virtual="/_build/content/footer.html" -->
