--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <details>
     <summary>Success stories</summary>
     <details>
-      <summary>Vanilla JS in apps</summary>
+      <summary>Vanilla JS used in apps</summary>
       <p>Including <a href="https://gomakethings.com/companies-that-use-vanilla-js/">Chris Fernandini's list</a>:</p>
       <ul>
         <li><a href="https://github.com/soundslice">Soundslice</a> by Adrian Holovaty (creator of the Django framework)
@@ -42,6 +42,7 @@
         <li><a href="https://web.archive.org/web/20200426193649/https://marcgrabanski.com/new-frontend-masters-website">The
           New Frontend Masters Site</a> is generated using Hugo and use JS to generate dynamic content for logged-in
           users</li>
+        <li>MDN has been rebuilt using Web Components and lit</li>
       </ul>
     </details>
     <details>
