add more links to vanilla JS resources and examples

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <summary>Success stories</summary>
     <details>
       <summary>Vanilla JS used in apps</summary>
-      <p>Including <a href="https://gomakethings.com/companies-that-use-vanilla-js/">Chris Fernandini's list</a>:</p>
+      <p>Including <a href="https://gomakethings.com/companies-that-use-vanilla-js/">Chris Fernandini's list</a> and
+        <a href="https://all-js.netlify.app">All JS Projects</a>:</p>
       <ul>
         <li><a href="https://github.com/soundslice">Soundslice</a> by Adrian Holovaty (creator of the Django framework)
         </li>
@@ -71,6 +72,12 @@
           Components</a></li>
       </ul>
     </details>
+  </details>
+  <details>
+    <summary>Other</summary>
+    <ul>
+      <li><a href="https://github.com/davidhund/awesome-vanilla-js">Awesome ‘Vanilla’ Javascript</a></li>
+    </ul>
   </details>
 </section>
 <!--#include virtual="/_build/content/footer.html" -->
