add MDN link for Web Components and Lit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="https://web.archive.org/web/20200426193649/https://marcgrabanski.com/new-frontend-masters-website">The
           New Frontend Masters Site</a> is generated using Hugo and use JS to generate dynamic content for logged-in
           users</li>
-        <li>MDN has been rebuilt using Web Components and lit</li>
+        <li><a href="https://developer.mozilla.org/en-US/blog/launching-new-front-end/">MDN has been rebuilt using Web Components and Lit</a></li>
       </ul>
     </details>
     <details>
@@ -70,6 +70,7 @@
         <li>Salesforce has been building on <a
             href="https://developer.salesforce.com/docs/component-library/documentation/en/lwc">Lightning Web
           Components</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/blog/launching-new-front-end/">MDN has been rebuilt using Web Components and Lit</a></li>
       </ul>
     </details>
   </details>
